--- a/changelog.yaml
+++ b/changelog.yaml
@@ -1,3 +1,4 @@
+4.2.0: ADD Headers option
 4.1.1: FIX bad class loader chosen by jakarta.mail
 4.1.0: ADD Mail redirection
 4.0.1: FIX Accept only once configuration
